--- a/auth-demo/src/main/resources/application.properties
+++ b/auth-demo/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb2?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=admin2
+spring.datasource.password=admin2
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
